# msPacMan

./: CMakeLists.txt  GTK_GraphLib_GNOME.txt  Untitled-1.indd  allTest.cpp  allTest.h  bash.exe.stackdump  build.bat  comm.cpp  comm.h  con_cli.cpp  con_cli.h  con_serv.cpp  main.cpp  serv.cpp  serv.h  sum_integers.cpp  sum_integers.h  test.cpp  test.h
Excluded/: Board.cpp  Board.h  Bridges.h  Dot.cpp  Keyb.cpp  Keyb.h  UDPClient.cpp  set.h
Excluded/Test/: CppTests.cpp  CppTests.h  allTest.h
J/: runme.bat
J/echo/: pom.xml
MsPacServer/: CMakeLists.txt
V2/server/: a.out  compile  server.cpp
_lib/freeglut/: Readme.txt
_lib2/: a
_lib2/graphics.h/: How to do.txt  testGraphics.cpp
_lib3/: A list of open source C++ libraries - cppreference.com.url  Basic Graphic Programming in C.url  Game Programming in C and C++ - Cprogramming.com.url  OpenGL Course - Create 3D and 2D Graphics With C++ - YouTube.url  Simple graphics with CPP - Draw a house using C++ graphics - YouTube.url  Using the WinBGIm Graphics Library with Dev-C++.url  Vector vs Raster Graphics - GeeksforGeeks.url  graphics-library · GitHub Topics.url
build-consoleClient-Desktop_Qt_5_12_12_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
build-msPacManClient-Desktop_Qt_5_12_12_MinGW_64_bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release
build-msPacManClient-Desktop_Qt_5_12_12_MinGW_64_bit-Debug/debug/: moc_mainwindow.cpp
build-msPcManClient-Desktop_Qt_5_12_12_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
consoleClient/: main.cpp
info/: C++_to_Java.txt  CLion.info  ClockInterruption  ConsoleWrite  MSGraphics.txt  Untitled-1.indd  clibs  con_cli.cpp  con_serv.h  hackingcpp  info_tcp.txt  minGW  qt5.12.from.git.txt  rewiev.txt
mingw64.zip/: mingw64.zip.010
msPacManClient/: Actor.cpp  Actor.h  Direction.cpp  Field.cpp  Field.h  direction.h  mainwindow.cpp  msPacManClient.pro
msPcManClient_old/: main.cpp  mainwindow.cpp  mainwindow.ui  msPcManClient.pro
other/: an.cpp  an2.cpp  an3.cpp  compile.bat  test.cpp
src/: Board.cpp  Board.h  Bridge.cpp  Bridge.h  Bridges.cpp  Bridges.h  ConsoleDraw.cpp  ConsoleDraw.h  DIRECT.h  Dot.cpp  Dot.h  Keyb.cpp  Keyb.h  Mob.cpp  Mob.h  Server.cpp  Server.h  Threads.h  Tick.cpp  Tick.h  TickRunner.cpp  TickRunner.h  UDPClient.cpp  UDPClient.h  UDPServ.cpp  UDPServ.h  Ways.h  map.cpp  map.h  set.cpp  test.cpp  test.h
tests/: BoardTest.h  CliTest.h  CppTests.cpp  CppTests.h  SecondTest.cpp  SecondTest.h  ServTest.h  ServerTest.h  allTest.h  clien_win.cpp  clien_win.h  commTest.h  lastTest.h  myTests.h  servTest.h  serv_win.cpp  serv_win.h
(+28 files in other folders)
